# purepytessel

./: .gitignore  README.md  pyproject.toml
examples/: gaussian.py  torus.py
src/purepytessel/: api.py  meshing.py
src/purepytessel/algos/: marching_cubes.py
src/purepytessel/algos/tables/: __init__.py  edge_table.py  edge_vertices.py  triangle_table.py  vertex_offsets.py
src/purepytessel/containers/: mesh.py  scalar_field.py
src/purepytessel/io/: ply.py
tests/: test_gradients.py  test_marching_cubes.py  test_scalar_field.py
